--- a/index.html
+++ b/index.html
@@ -3,18 +3,129 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Grid</title>
+  <title>FinalProject</title>
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="./style.css">
 
   
 </head>
 
 <body>
 
- <h1>heelo</h1>
+  <nav>
+	<div id="left">
+		<img src="assets/logo.png">
+		<a href="#">ABOUT</a>
+		<a href="#">GALLERY</a>
+		<a href="#">DOCUMENTS</a>
+	</div>
+	
+	<div id="right">
+		<div>
+			<img src="assets/icons/facebook.png" class="social">
+			<img src="assets/icons/twitter.png" class="social">
+		</div>
+		
+		<div>
+			<a href="#">LOGIN |</a>
+			<a href="#">REGISTER</a>
+		</div>
+	</div>
+  
+</nav>
+
+<section id="slider">
+  
+ <div id="leftarrow">
+   
+   <img src="assets/arrows/left arrow.png" class= "arrows">
+ </div>
+  
+ <div id="img">
+  <img src="assets/RECover.jpg" class="img">
+  </div> 
+  
+ <div id="rightarrow">
+   <img src="assets/arrows/right arrow.png" class= "arrows">
+  </div>
+  
+</section>
+
+<section id="text">
+  <h4>Nessst is a network showcasing student solutions from Eastern Washington University
+  </h4>
+</section>
+
+<section id="gallery">
+  <img src="assets/bubbles.jpg">
+  <img src="assets/city.jpg">
+  <img src="assets/feild.jpg">
+  <img src="assets/glass.jpg">
+  <img src="assets/lava.jpg">
+  <img src="assets/palm.jpg">
+  <img src="assets/purple.jpg">
+  <img src="assets/sand.jpg">
+  <img src="assets/sky.jpg">
+  <img src="assets/traffic.jpg">
+  <img src="assets/water.jpg">
+  <img src="assets/green.jpg">
+  
+</section>
+
+<section id="view">
+<a href="#" class="button">View More ...</a></section>
+
+<section id="greybar">
+  <div>
+    <img src="assets/icons/bird.png" class="social">
+    <h4>Get ready for something big. #nessst is coming!
+    </h4>
+    <p>about 20 minutes ago...</p>
+  </div>
+</section>
+
+<footer>
+  
+  <div id="lefty">
+		<div id="banner">
+      <img src="assets/logo.png">
+      <a href="#">ABOUT</a>
+      <a href="#">GALLERY</a>
+      <a href="#">DOCUMENTS</a>
+    </div>
+    <h5>LOOKING FOR SOMEONE?</h5>
+    <h6>Find who you're looking for:
+    </h6>
+    <div class="topnav">
+  
+  <input type="text" placeholder="Search..">
+</div>
+	</div>
+  <div id="middle">
+    <h5>VISUAL COMMUNICATION DESIGN</h5>
+    <p>A major in Visual Communication Design educates and prepares students to concieve and produce creative solutions to satisfy the visual communication needs of society.</p>
+    <h6>READ MORE...</h6>
+  </div>
+  <div id="righty">
+    <h5>VIEW GALLERY</h5>
+    <div id="subgallery">
+       <img src="assets/EDay.jpg">
+      <img src="assets/GlassesOne.jpg">
+      <img src="assets/KalispelCover.jpg">
+      <img src="assets/layout.jpg">
+      <img src="assets/LetterComps1.jpg">
+      <img src="assets/LetterComps2.jpg">
+      <img src="assets/LetterComps3.jpg">
+      <img src="assets/MonLogo.png">
+
+    </div>
+  </div>
+</footer>
+  
+
+</html>
   
   
 
