--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  </div>
   
  <div id="img">
-  <img src="assets/RECover.jpg" class="img">
+  <img src="assets/castle.jpg" class="img">
   </div> 
   
  <div id="rightarrow">
@@ -111,14 +111,14 @@
   <div id="righty">
     <h5>VIEW GALLERY</h5>
     <div id="subgallery">
-       <img src="assets/EDay.jpg">
-      <img src="assets/GlassesOne.jpg">
-      <img src="assets/KalispelCover.jpg">
-      <img src="assets/layout.jpg">
-      <img src="assets/LetterComps1.jpg">
-      <img src="assets/LetterComps2.jpg">
-      <img src="assets/LetterComps3.jpg">
-      <img src="assets/MonLogo.png">
+       <img src="assets/sand.jpg">
+      <img src="assets/purple.jpg">
+      <img src="assets/green.jpg">
+      <img src="assets/feild.jpg">
+      <img src="assets/lava.jpg">
+      <img src="assets/palm.jpg">
+      <img src="assets/sky.jpg">
+      <img src="assets/traffic.png">
 
     </div>
   </div>
